Add support for ODATA $filter, $select and $count on /scanConfigs
