# api/openapi.yaml
@@ -362,6 +362,8 @@ paths:
       summary: Get all scan configs.
       parameters:
         - $ref: '#/components/parameters/odataFilter'
+        - $ref: '#/components/parameters/odataSelect'
+        - $ref: '#/components/parameters/odataCount'
         - $ref: '#/components/parameters/page'
         - $ref: '#/components/parameters/pageSize'
       responses:
@@ -404,6 +406,7 @@ paths:
       summary: Get the details for a scan config.
       parameters:
         - $ref: '#/components/parameters/scanConfigID'
+        - $ref: '#/components/parameters/odataSelect'
       responses:
         200:
           description: Success
@@ -687,7 +690,7 @@ components:
     ScanConfigs:
       type: object
       properties:
-        total:
+        count:
           type: integer
           description: Total scan config count according to the given filters
           readOnly: true
@@ -698,8 +701,6 @@ components:
           items:
             $ref: '#/components/schemas/ScanConfig'
           readOnly: true
-      required:
-        - total
 
     ScanConfigData:
       type: object
@@ -1392,6 +1393,12 @@ components:
       in: query
       schema:
         type: string
+
+    odataCount:
+      name: "$count"
+      in: query
+      schema:
+        type: boolean
 
     scanID:
       name: scanID
